--- a/fit4kids/composer.json
+++ b/fit4kids/composer.json
@@ -31,6 +31,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
+        "twbs/bootstrap": "^3.3",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
@@ -47,7 +48,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-install-cmd": [
-            "@symfony-scripts"
+            "@symfony-scripts",
+            "cp -r vendor/twbs/bootstrap/dist web/bootstrap"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
