--- a/fit4kids/app/config/services.yml
+++ b/fit4kids/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    app_user.registration_complete:
+        class: AppBundle\EventListener\RegistrationCompleteListener
+        arguments: ['@doctrine.orm.entity_manager']
+        tags:
+            - { name: kernel.event_subscriber }
