--- a/fit4kids/app/config/parameters.yml
+++ b/fit4kids/app/config/parameters.yml
@@ -8,5 +8,5 @@ parameters:
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: test@test.pl
-    mailer_password: null
+    mailer_password: fejkowe
     secret: 594860c97c816aa9d23c0c7e0e5d887252ac6a66
